--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,36 +1,40 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Log in!{% endblock %}
+{% block title %}Log in{% endblock %}
 
 {% block body %}
+    <link rel="stylesheet" href="{{ asset('css/login.css') }}">
+    <header>
+        <img src="{{ asset('images/logo.png') }}" alt="logo">
+    </header>
+    <img class="banner" src="{{ asset('images/banniere_2.png') }}" alt="banner">
 <form method="post">
     {% if error %}
         <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
 
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputEmail">Email</label>
-    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-    <label for="inputPassword">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+    <h1 class="h3">Se connecter</h1>
 
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
+   <section class="container">
+      <article>
+          <label for="inputEmail" class="required">EMAIL</label>
+          <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
+      </article>
+       <article>
+           <label for="inputPassword" class="required">MOT DE PASSE</label>
+           <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+       </article>
+       <input type="hidden" hidden name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
-    {#
-        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-        See https://symfony.com/doc/current/security/remember_me.html
-
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" name="_remember_me"> Remember me
-            </label>
-        </div>
-    #}
-
+       <div class="checkbox mb-3">
+           <label >
+               <input type="checkbox" name="_remember_me"> Se souvenir de moi
+           </label>
+       </div>
+   </section>
     <button class="btn btn-lg btn-primary" type="submit">
-        Sign in
+        SE CONNECTER
     </button>
+    <a class="back" href="{{ path('app_home') }}">RETOUR</a>
 </form>
 {% endblock %}
