--- a/public/css/homePage.css
+++ b/public/css/homePage.css
@@ -61,39 +61,51 @@ img:nth-child(5) {
 .sidebar{
     display: flex;
     justify-content: space-around;
-    flex-direction: column;
-    height: 50vh;
+    flex-direction: row;
     margin-top: 50px;
+    height: auto;
+    width: 75%;
+    margin-left: auto;
+    margin-right:auto ;
 }
 
 .tiers{
-    width: 10%;
+    width: 25%;
+    text-align: center;
 }
 
 .tiers>ul{
     display: none;
+    width: 100%;
+
 }
 
+h2{
+    color: #666;display:inline-block; margin:0;text-transform:uppercase;
+}
+
+.tiers h2:after{
+    display:block;
+    content: '';
+    border-bottom: solid 2px grey;
+    transform: scaleX(0);
+    transition: transform 1s ease-in-out;
+}
 
 .tiers:hover >ul{
     display: block;
-    position: absolute;
-    left: 10%;
-    margin-top: -25px;
-
+    position: relative;
+    margin-top:auto;
 }
 
-.tiers:active >ul{
-    display: block;
-    position: absolute;
-    left: 10%;
-    margin-top: -25px;
-
+.tiers:hover h2:after{
+    transform: scaleX(1);
 }
 
+/*.sidebar{*/
+/*    background-image: url("../images/banniere_2.png");*/
+/*}*/
 
-.tiers:hover li{
-    background-color: #999999;
-    border: solid 3px #888888;
-    width: 110%;
-}
+
+
+
