--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -67,9 +67,10 @@
         <section class="pic-ctn">
             <img src="{{ asset('images/Loisirs.jpg') }}" alt="img" class="img">
         </section>
-
+        <section class="match">
+        </section>
         <section class="about">
-
+        <!-- insert all informations about the club -->
         </section>
         <section class="news">
            <section class="news-content">
