Add informations for homepage

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -75,6 +75,25 @@
             <img src="{{ asset('images/Loisirs.jpg') }}" alt="img" class="img">
         </section>
         <section class="match">
+            <section class="lastMatch">
+                <article>
+                    <p class="last-match-date"></p>
+                    <p class="last-match-team1"></p>
+                    <p class="last-match-time"></p>
+                    <p class="last-match-team2"></p>
+                    <p class="last-match-location"></p>
+                </article>
+            </section>
+            <section class="nextMatch">
+                <article>
+                    <p class="next-match-date"></p>
+                    <p class="next-match-team1"></p>
+                    <p class="next-match-time"></p>
+                    <p class="next-match-team2"></p>
+                    <p class="next-match-location"></p>
+                    <p class="next-match-remaining-time"></p>
+                </article>
+            </section>
         </section>
         <section class="about">
         <!-- insert all informations about the club -->
