adding some CSS and two article for matches

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -52,6 +52,32 @@
             </div>
         </section>
         <img src="{{ asset('images/banniere_2.png') }}" alt="banner" class="banner">
+
+        <section class="match">
+            <section class="nextMatch matchSection">
+                <h2>Prochain match</h2>
+                <article>
+                    <p class="next-match-date"></p>
+                    <p class="next-match-team1"></p>
+                    <p class="next-match-time"></p>
+                    <p class="next-match-team2"></p>
+                    <p class="next-match-location"></p>
+                    <p class="next-match-remaining-time"></p>
+                </article>
+            </section>
+
+            <section class="lastMatch matchSection">
+            <h2>Match précédent</h2>
+                <article>
+                    <p class="last-match-date"></p>
+                    <p class="last-match-team1"></p>
+                    <p class="last-match-time"></p>
+                    <p class="last-match-team2"></p>
+                    <p class="last-match-location"></p>
+                </article>
+            </section>
+
+        </section>
         <section class="pic-ctn reveal_bottom">
             <section class="aboutOur">
                 <h1>A propos de nous</h1>
@@ -74,30 +100,7 @@
             </section>
             <img src="{{ asset('images/Loisirs.jpg') }}" alt="img" class="img">
         </section>
-        <section class="match">
-            <section class="lastMatch">
-                <article>
-                    <p class="last-match-date"></p>
-                    <p class="last-match-team1"></p>
-                    <p class="last-match-time"></p>
-                    <p class="last-match-team2"></p>
-                    <p class="last-match-location"></p>
-                </article>
-            </section>
-            <section class="nextMatch">
-                <article>
-                    <p class="next-match-date"></p>
-                    <p class="next-match-team1"></p>
-                    <p class="next-match-time"></p>
-                    <p class="next-match-team2"></p>
-                    <p class="next-match-location"></p>
-                    <p class="next-match-remaining-time"></p>
-                </article>
-            </section>
-        </section>
-        <section class="about">
-        <!-- insert all informations about the club -->
-        </section>
+
         <section class="news reveal_bottom">
            <section class="news-content">
                <article class="news-element">
