--- a/public/css/homePage.css
+++ b/public/css/homePage.css
@@ -1,5 +1,5 @@
 
-/*About section*/
+/*---------------------About section------------------*/
 
 .pic-ctn{
     width: 100%;
@@ -26,7 +26,7 @@
 }
 
 
-/*Transition*/
+/*---------------------Transition---------------------*/
 
 
 
@@ -43,7 +43,7 @@
 }
 
 
-/* news */
+/*--------------------- news -----------------------*/
 .news
 {
     width: 100%;
@@ -164,24 +164,12 @@
     color: white;
     text-decoration: none;
 }
-
-.sidebar{
+/*----------------Matches sections-----------------*/
+.match{
     display: flex;
     justify-content: space-around;
-    flex-direction: row;
-    text-align: center;
-    width: 100%;
-    margin-top: 50px;
-
-}
-
-.tiers{
-    width: 15%;
-    height: 25%;
-}
-
-.tiers>ul{
-    display: none;
+    height: 400px;
+    align-items: center;
 }
 
 h2 {
@@ -189,6 +177,18 @@ h2 {
     display: inline-block;
     margin: 0;
     text-transform: uppercase;
+}
+
+.matchSection{
+    background-color: red;
+    height: 200px;
+    width: 500px;
+    border-radius: 12px;
+}
+
+.matchSection>h2{
+    width: 100%;
+
 }
 
 
@@ -203,7 +203,7 @@ h2 {
 /*    z-index: 1;*/
 
 
-/* Contact */
+/* -------------Contact----------------*/
 .contact
 {
     background-color: #f8f9f9;
@@ -264,3 +264,6 @@ p{
     text-align: center;
     margin: 0 0 0 1%;
 }
+
+
+
