--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -14,10 +14,10 @@
             <div class="tiers">
                 <h2>Équipes</h2>
                 <ul>
-                    <li><a href="#">Afficher une équipe</a></li>
-                    <li><a href="#">Modifier une équipe</a></li>
-                    <li><a href="#">Ajouter une équipe</a></li>
-                    <li><a href="#">Supprimer une équipe</a></li>
+                    <li><a href="{{ path('app_equipe') }}">Afficher une équipe</a></li>
+                    <li><a href="{{ path('app_equipe_edit') }}">Modifier une équipe</a></li>
+                    <li><a href="{{ path('app_equipe_add') }}">Ajouter une équipe</a></li>
+                    <li><a href="{{ path('app_equipe_delete') }}">Supprimer une équipe</a></li>
                 </ul>
             </div>
             <div class="tiers">
