--- a/templates/bundles/TwigBundle/Exception/error404.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error404.html.twig
@@ -9,8 +9,6 @@
             <div class="bee-sketch red"></div>
             <div class="bee-sketch blue"></div>
         </div>
-
-        <h1>404:
-            <small>Players Not Found</small></h1>
+        <h1>404: <small>Page Not Found</small></h1>
     </div>
 {% endblock %}
