--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -53,7 +53,7 @@
         </section>
         <img src="{{ asset('images/banniere_2.png') }}" alt="banner" class="banner">
 
-        <section class="match">
+        <section class="match reveal_bottom">
             <section class="nextMatch matchSection">
                 <h2>Prochain match</h2>
                 <article>
