erreur 500 + update form to create a team

--- a/templates/bundles/TwigBundle/Exception/error403.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error403.html.twig
@@ -26,6 +26,6 @@
     </g>
 </svg>
 <h1>You are not allowed to enter here</h1>
-<h2>Go <a target="_blank" href="https://www.youtube.com/watch?v=JccW-mLdNe0">Home!</a></h2>
+<h2>Go <a target="_blank" href="{{ path('app_home') }}">Home!</a></h2>
     <script src="{{ asset('js/error403.js') }}"></script>
 {% endblock %}
