--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,8 +1,6 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Accueil{% endblock %}
-
-
 {% block body %}
     <link rel="stylesheet" href="{{ asset("css/homePage.css") }}">
     <link rel="stylesheet" href="{{ asset("css/header.css") }}">
@@ -23,10 +21,10 @@
             <div class="tiers">
                 <h2>Matches</h2>
                 <ul>
-                    <li><a href="#">Afficher un match</a></li>
-                    <li><a href="#">Modifier un match</a></li>
-                    <li><a href="#">Ajouter un match</a></li>
-                    <li><a href="#">Supprimer une match</a></li>
+                    <li><a href="{{ path('app_match') }}">Afficher un match</a></li>
+                    <li><a href="{{ path('app_match_edit') }}">Modifier un match</a></li>
+                    <li><a href="{{ path('app_match_create') }}">Ajouter un match</a></li>
+                    <li><a href="{{ path('app_match_delete') }}">Supprimer une match</a></li>
                 </ul>
             </div>
             <div class="tiers">
