--- a/templates/match/create.html.twig
+++ b/templates/match/create.html.twig
@@ -1,10 +1,23 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}
-
-{% endblock %}
+{% block title %}Créer un match{% endblock %}
 
 {% block body %}
-
+    <section class="main">
+        <section class="formCreateTeam">
+            <h1>Création d'équipe</h1>
+            {{ form_start(form) }}
+            {{ form_row(form.equipe_locale) }}
+            {{ form_row(form.domicile_exterieur) }}
+            {{ form_row(form.equipe_adverse) }}
+            {{ form_row(form.hote) }}
+            {{ form_row(form.date_heure) }}
+            {{ form_row(form.num_semaine) }}
+            {{ form_row(form.num_journee) }}
+            {{ form_row(form.gymnase) }}
+            <button type="submit" class="btn btn-primary">Créer</button>
+            {{ form_end(form) }}
+        </section>
+    </section>
 {% endblock %}
 
